fix: better visuals of which workspces are visible, and which are focused

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -64,13 +64,17 @@ $separator: #3c3836;
 
     &:children {
     }
-    .active, .inactive {
+    .active, .inactive, .visible {
         padding-left: 25px;
         padding-right: 25px;
     }
 
     .active {
         color: $yellow;
+        background-color: $gray;
+    }
+
+    .visible {
         background-color: $gray;
     }
 
